Fixed visibility bug

--- a/less/datepicker.less
+++ b/less/datepicker.less
@@ -33,4 +33,5 @@
 .closed {
   animation: closed 0.1s ease-out;
   animation-fill-mode: forwards;
+  display: none;
 }
